--- a/FightManager_VB2/app.config
+++ b/FightManager_VB2/app.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>	
 	<appSettings>
-		<add key="RaceDataAdresse" value="D:\Truc\FightManager_VB2\FightManager_VB2\FightManager_VB2\json\racedata.json" />
-		<add key="ClasseDataAdresse" value="D:\Truc\FightManager_VB2\FightManager_VB2\FightManager_VB2\json\classedata.json" />
+		<add key="RaceDataAdresse" value="D:\DevOps\FightManager_VB\FightManager_VB2\json\racedata.json" />
+		<add key="ClasseDataAdresse" value="D:\DevOps\FightManager_VB\FightManager_VB2\json\classedata.json" />
 	</appSettings>
 </configuration>
